added prompts and color to shapes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Command line tool to generate an svg logo and write it to file.",
     "main": "index.js",
     "scripts": {
-      "test": "jest"
+      "test": "jest --verbose"
     },
     "private": true,
     "keywords": [],
